--- a/configurations/global_config.json
+++ b/configurations/global_config.json
@@ -1,7 +1,1 @@
-{
-    "version": 1.7,
-    "data_directory": "data/",
-    "embeddings_file": "data/glove.6B.100d.txt",
-    "argid_lr": 0.0005,
-    "debug_mode": false
-}
+global_config_1.5.json
